--- a/www/css/site.css
+++ b/www/css/site.css
@@ -7670,10 +7670,10 @@ footer .container {background: #f7f5fa;}
 
 /* sugar page formatting */
 .api-sugar-wrapper {border: 1px solid #ddd;border-radius: 4px 4px 0 0;padding: 1em;margin: 0.5em 0;}
-.api-sugar-container {border: 1px solid green;padding: 1em;position: relative;}
+.api-sugar-container {border: 1px solid green;padding: 1em;position: relative;border-radius: 6px;}
 .api-sugar-container:before {color: #ffffff;position: absolute;right: 0;top: 0;background: #008000}
-.api-sugar-container-template {width: 7em;padding: 0;}
-.api-sugar-container-template:before {content: 'TEMPLATE';left: 0;}
+.api-sugar-container-template {width: 7em;padding: 0;background: #008000;}
+.api-sugar-container-template:before {content: 'TEMPLATE';left: 0.5em;}
 .api-sugar-container-template-collection {}
 .api-sugar-container-template-collection:before {content: 'TEMPLATE COLLECTION';}
 .api-sugar-container-template-hash {}
@@ -7684,8 +7684,8 @@ footer .container {background: #f7f5fa;}
 .api-sugar-container-type:before {content: 'TYPE';}
 .api-sugar-container-object-collection {}
 .api-sugar-container-object-collection:before {content: 'OBJECT COLLECTION';}
-.api-sugar-container-object-map {}
-.api-sugar-container-object-map:before {content: 'OBJECT MAP';}
+.api-sugar-container-object-hash {}
+.api-sugar-container-object-hash:before {content: 'OBJECT HASH';}
 .api-sugar-tag-inner-wrapper {padding-left: 2em}
 .api-sugar-tag-outer-wrapper {}
 .api-sugar-object-content-wrapper {padding-left: 2em}
