--- a/templates/standard_widgets.html
+++ b/templates/standard_widgets.html
@@ -136,7 +136,7 @@
 				properties: {
 					title: {type: 'template'},
 					content: {type: 'template'},
-					'is-expanded': {type: 'lava_type', type_name: 'Boolean', is_attribute: true, name: 'is_expanded'}
+					is_expanded: {type: 'lava_type', type_name: 'Boolean', is_attribute: true}
 				}
 			}
 		}
@@ -193,8 +193,8 @@
 					title: {type: 'template'},
 					content: {type: 'template'},
 					name: {type: 'lava_type', is_attribute: true, type_name: 'Boolean'},
-					'is-enabled': {type: 'lava_type', is_attribute: true, type_name: 'Boolean', name: 'is_enabled'},
-					'is-hidden': {type: 'lava_type', is_attribute: true, type_name: 'Boolean', name: 'is_hidden'}
+					is_enabled: {type: 'lava_type', is_attribute: true, type_name: 'Boolean'},
+					is_hidden: {type: 'lava_type', is_attribute: true, type_name: 'Boolean'}
 				}
 			}
 		}
